--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
-ADCD79
-EFC1A9
-3E5D74
-7F7676
-ACB7EC
+
+body{
+background-color: #E0EFDA}
+
+h1{
+color: #3B5249;
+font-family: 'Zen dots', monospace;
+font-size: 50px;
+text-align: center;
+}
+
+h3{
+color: #96ACB7;
+	
+}
+
+
