--- a/style.css
+++ b/style.css
@@ -19,17 +19,31 @@ li{
 	float: left;
 	display: inline-block;
 	list-style: none;
-	margin-right: 90px;
+	margin-left: 85px;
 	padding: 27px 65px ;
-	font-size: 20px;
+	font-size: 21px;
 
 
 }
+
 img{
 border: 5px inset #636363;
 border-radius: 15%;
 
 }
+
+a:hover {
+	color: #6477a3;
+}
+
+
+.center {
+	display: block;
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 
 }
 
